--- a/portfolio2.css
+++ b/portfolio2.css
@@ -27,7 +27,7 @@
   }
 
   body {
-    background: url("http://i36.photobucket.com/albums/e28/folayanc/orginal%20lady%20in%20phone_zpsyhxksjoc.jpg");
+    background: url("http://i36.photobucket.com/albums/e28/folayanc/Portfolio%202%20Project/orginal%20lady%20in%20phone_zpsyhxksjoc.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -57,7 +57,6 @@ padding-bottom: 85px;
     font-size: 35px;
     color: rgb(126, 84, 30)    
       }
-      .btn-button{
-        background-color: goldenrod;
-      }
+ 
+  
   
